    + Fixed problem when uploading packages to an unconfigured architecture.
    + Thanks Alexei Chetroi.
  * Setup a user configuration directory at $ENV{'HOME'}/.debpool if one
    doesn't exist.
  * Added 'DM-Upload-Allowed: yes' field.
  * Support parsing changes files that are format 1.7 or 1.8. Closes: #481861
  * Added a test script to begin changing debpool into a pure Perl program.

 -- Andres Mejia <mcitadel@gmail.com>  Mon, 02 Jun 2008 22:54:17 -0700

debpool (0.2.3) experimental; urgency=low

  * Handle sections with no subsection more usefully in
    Strip_Subsection. (Closes: #317390, #319959)
  * Refactor various bits to use Strip_Subsection, rather than re-
    implementing it badly. I don't know what on earth I was thinking,
    but things should behave better now. (Closes: #320062)
  * Don't hardcode the pool base path as 'pool'; determine it from
    archive_dir and pool_dir, instead. (Closes: #323625)
  * Updated to Policy 3.7.2.0 (no changes).
  * Moved dependancy on debhelper from Build-Depends-Indep to Build-
    Depends (to shut up various build tools).

 -- Joel Aelwyn <fenton@debian.org>  Mon,  3 Jul 2006 12:08:12 -0600

debpool (0.2.2) experimental; urgency=low

  * Handle stripping of epoch versions where they aren't used.
  * Properly handle each possibly version type (meta or 'package'
    version, source version, binary version(s)). This change is
    backward-compatible, but old version information will only work as
    well as it did in previous releases (that is, all of the versions
    are assumed to have the same value for a given package version).

 -- Joel Aelwyn <fenton@debian.org>  Wed, 23 Feb 2005 10:47:20 -0700

debpool (0.2.1) experimental; urgency=low

  * Added proper support for archive sections (contrib, non-free as
    separate from main). Unfortunately, this means changing the
    directory structure of the pool area. Thus, bumping to version to
    0.2.x