@@ -95,6 +95,8 @@ debpool (0.3.2) experimental; urgency=low
   * Added 'DM-Upload-Allowed: yes' field.
   * Support parsing changes files that are format 1.7 or 1.8. Closes: #481861
   * Added a test script to begin changing debpool into a pure Perl program.
+  * Change AUTHOR field of Makefile.PL to Debpool Developer's mailing list.
+  * Supply VERSION field when building package based on changelog.
 
  -- Andres Mejia <mcitadel@gmail.com>  Mon, 02 Jun 2008 22:54:17 -0700
 
